# pong-clone

./: .gitignore  .timetracker  Cargo.toml  start_web.bat  start_webserver.bat  wasm-bindgen-macroquad.sh
docs/: index.html  pong-clone.wasm  pong_clone.d.ts  pong_clone.js  pong_clone.wasm  pong_clone_bg.wasm  pong_clone_bg.wasm.d.ts
src/: ai.rs  bounds.rs  constants.rs  game.rs  main.rs  physics.rs  player.rs  score.rs
